--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Nairobi, Kenya</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> lelionsolonka81@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:lelionsolonka81@gmail.com" style="text-decoration: none;"></a></li>
               </ul>
             </div>
           </div>
