--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <div class="section-title">
         <h2>Online Certification</h2>
       </div>
-
+<!-- 
       <div class="row portfolio-container" style="position: relative; height: 437.75px;">
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
@@ -238,12 +238,12 @@
             <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Machine Learning</h4>
-              <div class="portfolio-links">
+              <div class="portfolio-links"> -->
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4b11039d-aaa2-4e27-bfd5-af91dfeeab19" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-              </div>
+<!--               </div>
             </div>
            </div>
-          </div>
+          </div> -->
         
       </div>
     </div>
